--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -53,8 +53,8 @@
 <%= f.hidden_field :postal_code %>
 <%= f.hidden_field :address %>
 <%= f.hidden_field :name %>
-<%= f.hidden_field :total_payment, value: @sum %>
+<%= f.hidden_field :total_payment, value: @sum  %>
 <%= f.hidden_field :payment_method %>
-<%= f.hidden_field :shipping_cost %>
+<%= f.hidden_field :shipping_cost, value: @order.shipping_cost %>
  <%= f.submit '確認画面へ進む' %>
 <% end %>
