--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -32,4 +32,4 @@
     </tr>
 </table>
 <%= link_to "編集する", edit_admin_customer_path(@customer), class:"btn btn-success"  %>
-<%= link_to "注文履歴一覧を見る", admin_item_path(@customer), class:"btn btn-primary"  %>
+<%= link_to "注文履歴一覧を見る", admin_homes_top_path, class:"btn btn-primary"  %>
